--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,8 +88,8 @@
 
             <h2>ABOUT ME</h2>
 
-            <p> Hi, I'm Brian Nguyen, <span>Computer Science student at <a href="https://www.gmu.edu">George Mason University</a></span>, <span> <a href="https://mvp.microsoft.com/en-us/PublicProfile/5003866">Azure MVP</a></span>
-               and <span><a href="https://youtube.com/madebygps">YouTuber</a></span> focused on making cloud learning more accessible and less daunting for everyone. 
+            <p> Hi, I'm Brian Nguyen, <span>Computer Science student at <a href="https://www.gmu.edu">George Mason University
+               and focused on making cloud more accessible and less daunting for everyone. 
                
          </br>
       </br>
@@ -126,18 +126,7 @@
 
                </div>
 
-            </div> <!-- item end -->
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>Azure Fundamentals AZ900</h3>
-                  <p class="info"><em class="date">July 2020</em></p>
-
-               </div>
-
-            </div> <!-- item end -->
+            
 
             <div class="row item">
 
