Updates to HTML

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -112,7 +112,7 @@
       <div class="row education">
 
          <div class="three columns header-col">
-            <h1><span>Certifications</span></h1>
+            <h1><span>Education</span></h1>
          </div>
 
          <div class="nine columns main-col">
@@ -121,7 +121,7 @@
 
                <div class="twelve columns">
 
-                  <h3>AWS Certified Developer Associate</h3>
+                  <h3>George Mason University</h3>
                   <p class="info"><em class="date">March 2018</em></p>
 
                </div>
