--- a/frontend/index.html
+++ b/frontend/index.html
@@ -121,8 +121,8 @@
 
                <div class="twelve columns">
 
-                  <h3>George Mason University</h3>
-                  <p class="info"><em class="date">March 2018</em></p>
+                  <h3>George Mason University - Computer Science B.S.</h3>
+                  <p class="info"><em class="date">July 2026</em></p>
 
                </div>
 
