Made changes to HTML

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -122,7 +122,7 @@
                <div class="twelve columns">
 
                   <h3>George Mason University - Computer Science B.S.</h3>
-                  <p class="info"><em class="date">July 2026</em></p>
+                  <p class="info"><em class="date">August 2022 - present</em></p>
 
                </div>
 
@@ -132,8 +132,8 @@
 
                <div class="twelve columns">
 
-                  <h3>LPI Linux Essentials</h3>
-                  <p class="info"><em class="date">February 2021</em></p>
+                  <h3>Osbourn Park High School - advanced diploma</h3>
+                  <p class="info"><em class="date">August 2018 - July 2022</em></p>
 
                </div>
 
