--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,7 +88,7 @@
 
             <h2>ABOUT ME</h2>
 
-            <p> Hi, I'm Brian Nguyen, <span>Computer Science student at <a href="https://www.gmu.edu">George Mason University
+            <p> Hi, I'm Brian , <span>Computer Science student at <a href="https://www.gmu.edu">George Mason University
                and focused on making cloud more accessible and less daunting for everyone as I believe cloud is the future. 
                
          </br>
