Made changes to index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -89,7 +89,7 @@
             <h2>ABOUT ME</h2>
 
             <p> Hi, I'm Brian , <span>Computer Science student at <a href="https://www.gmu.edu">George Mason University
-               and focused on making cloud less daunting and less challenging for everyone as I believe cloud is the future. 
+               and focused on making cloud accessible and less challenging for everyone as I believe cloud is the future. 
                
          </br>
       </br>
