--- a/frontend/index.html
+++ b/frontend/index.html
@@ -121,7 +121,7 @@
 
                <div class="twelve columns">
 
-                  <h3>George Mason University - Computer Science B.S.</h3>
+                  <h3>George Mason University????? - Computer Science B.S.</h3>
                   <p class="info"><em class="date">August 2022 - present</em></p>
                   <p class="info">Made Deans List 2022 - Current</p>
 
